--- a/app/src/main/res/layout/fragment_chat_info.xml
+++ b/app/src/main/res/layout/fragment_chat_info.xml
@@ -184,8 +184,23 @@
                     android:textSize="@dimen/size_content" />
             </LinearLayout>
 
+            <TextView
+                android:id="@+id/tv_group_qrcode"
+                android:layout_marginTop="@dimen/spacing_normal"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/chat_info_header_view_width"
+                android:background="@color/white"
+                android:gravity="center_vertical"
+                android:paddingLeft="@dimen/spacing_mid"
+                android:text="群二维码"
+                android:paddingRight="@dimen/spacing_mid"
+                android:textColor="@color/important_for_content"
+                android:textSize="@dimen/size_content"
+                android:drawableRight="@mipmap/icon_qrcode_gray"/>
+
             <LinearLayout
                 android:id="@+id/ll_group_manager"
+                android:layout_marginTop="@dimen/dp10"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
