--- a/app/src/main/res/layout/view_integral_red_packet.xml
+++ b/app/src/main/res/layout/view_integral_red_packet.xml
@@ -3,6 +3,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
+    android:layout_marginTop="20dp"
     android:background="@mipmap/bg_red_packet">
 
     <LinearLayout
