1.更改首页；2.更改扫描群二维码后群详情加入群聊bug；3.更改提币手续费计算；4.更改账本提币实际扣除金额

--- a/app/src/main/res/layout/fragment_chat_info.xml
+++ b/app/src/main/res/layout/fragment_chat_info.xml
@@ -574,7 +574,7 @@
                 android:layout_marginTop="@dimen/spacing_normal"
                 android:background="@color/white"
                 android:gravity="center"
-                android:text="@string/chat_delete_group"
+                android:text="@string/chat_quit_group"
                 android:textColor="@color/important_for_note"
                 android:textSize="@dimen/size_content" />
         </LinearLayout>
