--- a/app/src/main/res/layout/view_message_home_page_header.xml
+++ b/app/src/main/res/layout/view_message_home_page_header.xml
@@ -50,7 +50,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:descendantFocusability="blocksDescendants"
-        android:background="@drawable/shape_gradient_orange">
+        android:background="@mipmap/bg_home_market">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_market"
