--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -57,5 +57,5 @@
     <color name="state_currency_record_withdraw">#ff9900</color>
 
     <color name="red_packet_text_color">#ffebd5</color>
-    <color name="home_currency_color">#db323232</color>
+    <color name="home_currency_color">#e6b206</color>
 </resources>
