--- a/app/src/main/res/layout/item_new_integration_rule.xml
+++ b/app/src/main/res/layout/item_new_integration_rule.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:paddingLeft="@dimen/dp12"
+    android:id="@+id/ll_parent"
     android:background="@color/white">
 
     <LinearLayout
@@ -54,9 +55,8 @@
         android:id="@+id/tv_rule_desc"
         android:visibility="gone"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp36"
+        android:layout_height="@dimen/dp30"
         android:paddingRight="@dimen/dp16"
-        android:gravity="center_vertical"
         android:textSize="@dimen/sp13"
         android:text="注册下载APP并登陆成功，奖励1000糖果"/>
 
