--- a/baseproject/src/main/res/values/integers_tsp.xml
+++ b/baseproject/src/main/res/values/integers_tsp.xml
@@ -46,13 +46,13 @@
     <!-- 简介输入到多少字符的时候显示提示 -->
     <integer name="show_introduce_input_size">33</integer>
 
-    <!-- 创建圈子公告最多输入字符数量 -->
+    <!-- 创建社区公告最多输入字符数量 -->
     <integer name="circle_notice_input_max_size">2000</integer>
-    <!-- 创建圈子名字最多输入字符数量 -->
+    <!-- 创建社区名字最多输入字符数量 -->
     <integer name="circle_name_input_max_size">20</integer>
-    <!-- 创建圈子简介最多输入字符数量 -->
+    <!-- 创建社区简介最多输入字符数量 -->
     <integer name="circle_introduce_max_size">255</integer>
-    <!-- 创建圈子简介输入到多少字符的时候显示提示 -->
+    <!-- 创建社区简介输入到多少字符的时候显示提示 -->
     <integer name="circle__input_size">200</integer>
 
     <!--发布动态标题最大字数30-->
