--- a/app/src/main/res/layout/fragment_chat_info.xml
+++ b/app/src/main/res/layout/fragment_chat_info.xml
@@ -12,7 +12,6 @@
         android:layout_gravity="center" />
 
     <android.support.v4.widget.NestedScrollView
-        android:layout_marginBottom="@dimen/chat_info_header_view_width"
         android:id="@+id/ll_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -70,7 +69,6 @@
                 android:id="@+id/ll_group"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/spacing_normal"
                 android:background="@color/white"
                 android:orientation="vertical"
                 android:visibility="visible">
@@ -430,7 +428,6 @@
                     android:gravity="center_vertical"
                     android:paddingLeft="@dimen/spacing_mid"
                     android:text="@string/chat_info_upgrade"
-                    android:layout_marginBottom="@dimen/dp10"
                     android:textColor="@color/important_for_content"
                     android:textSize="@dimen/size_content" />
 
@@ -472,9 +469,10 @@
                 android:id="@+id/rl_block_message"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/divider_line"
+                android:layout_marginTop="@dimen/dp10"
                 android:background="@color/white"
-                android:padding="@dimen/spacing_mid">
+                android:padding="@dimen/spacing_mid"
+                android:visibility="gone">
 
                 <TextView
                     android:id="@+id/tv_alert_one"
@@ -566,20 +564,24 @@
                 android:textColor="@color/important_for_content"
                 android:textSize="@dimen/size_content" />
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp80"/>
 
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
+
     <!--解散群组-->
     <TextView
         android:layout_gravity="bottom"
         android:id="@+id/tv_delete_group"
+        android:layout_margin="@dimen/dp12"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/chat_info_header_view_width"
-
+        android:layout_height="@dimen/dp44"
         android:layout_marginTop="@dimen/spacing_normal"
-        android:background="@color/white"
+        android:background="@drawable/shape_corner_4dp_bg_theme"
         android:gravity="center"
         android:text="@string/chat_quit_group"
-        android:textColor="@color/important_for_note"
+        android:textColor="@color/white"
         android:textSize="@dimen/size_content" />
 </FrameLayout>
