--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -153,6 +153,7 @@
 
 
     <dimen name="dp22">22dp</dimen>
+    <dimen name="dp44">44dp</dimen>
     <dimen name="dp64">64dp</dimen>
     <dimen name="dp77">77dp</dimen>
     <dimen name="dp90">90dp</dimen>
