--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -57,6 +57,15 @@
                 app:leftText="@string/password_manager"
                 app:leftTextLeftPadding="@dimen/spacing_mid"
                 app:rightImage="@mipmap/ic_arrow_smallgrey"/>
+            <!--密码管理-->
+            <com.zhiyicx.baseproject.widget.button.CombinationButton
+                android:id="@+id/bt_change_privacy"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/full_button_height"
+                android:visibility="gone"
+                app:leftText="@string/privacy_manager"
+                app:leftTextLeftPadding="@dimen/spacing_mid"
+                app:rightImage="@mipmap/ic_arrow_smallgrey"/>
             <!--清理缓存-->
             <com.zhiyicx.baseproject.widget.button.CombinationButton
                 android:id="@+id/bt_clean_cache"
