--- a/app/src/main/res/layout/item_currency_interest.xml
+++ b/app/src/main/res/layout/item_currency_interest.xml
@@ -56,4 +56,36 @@
 
     </FrameLayout>
 
+
+
+    <FrameLayout
+        android:layout_weight="0.5"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/iv_recharge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:scaleType="centerInside"
+            android:src="@mipmap/icon_add_red"/>
+
+    </FrameLayout>
+
+    <FrameLayout
+        android:layout_weight="0.5"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/iv_withdraw"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:scaleType="centerInside"
+            android:src="@mipmap/icon_sub_red"/>
+
+    </FrameLayout>
+
 </LinearLayout>
