--- a/app/src/main/res/layout/item_home_market.xml
+++ b/app/src/main/res/layout/item_home_market.xml
@@ -2,10 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="@dimen/dp134"
-    android:layout_height="@dimen/dp92"
+    android:layout_height="@dimen/dp90"
+    android:layout_marginLeft="@dimen/dp4"
     android:orientation="vertical"
     android:gravity="center"
-    android:background="@mipmap/icon_home_market_bg">
+    android:id="@+id/ll_parent"
+    android:background="@mipmap/bg_home_market_1">
 
     <TextView
         android:id="@+id/tv_currency"
