--- a/video/src/main/res/values/colors.xml
+++ b/video/src/main/res/values/colors.xml
@@ -52,5 +52,6 @@
     <color name="line_button">#565758</color>
     <color name="black_translucent">#50000000</color>
     <color name="top_bottom">#42BAF8</color>
+    <color name="edit_back_color">#42bbbbbb</color>
 
 </resources>
