--- a/app/src/main/res/layout/fragment_my_friends_list.xml
+++ b/app/src/main/res/layout/fragment_my_friends_list.xml
@@ -10,42 +10,8 @@
         android:layout_height="@dimen/toolbar_height"
         android:background="@color/white">
 
-        <TextView
-            android:id="@+id/tv_toolbar_left"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:drawableLeft="@mipmap/topbar_back"
-            android:drawablePadding="@dimen/spacing_small"
-            android:gravity="center"
-            android:paddingBottom="@dimen/divider_line"
-            android:paddingLeft="@dimen/toolbar_padding_left"
-            android:paddingRight="@dimen/toolbar_padding_right"
-            android:textColor="@color/toolbar_text_corlor_normal"
-            android:textSize="@dimen/toolbar_left_text_size"
-            android:visibility="gone" />
-
-        <TextView
-            android:id="@+id/tv_toolbar_right"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_alignParentRight="true"
-            android:layout_gravity="right"
-            android:drawableLeft="@mipmap/ico_addfriends"
-            android:drawablePadding="@dimen/spacing_small"
-            android:ellipsize="end"
-            android:gravity="center"
-            android:maxLength="4"
-            android:maxLines="1"
-            android:paddingBottom="@dimen/divider_line"
-            android:paddingLeft="@dimen/toolbar_padding_right"
-            android:paddingRight="@dimen/toolbar_padding_right"
-            android:singleLine="true"
-            android:textColor="@color/important_for_content"
-            android:textSize="@dimen/size_icon_assist"
-            android:visibility="gone" />
-
         <com.zhiyicx.baseproject.widget.textview.DrawableSizeTextView
-            android:id="@+id/tv_toolbar_center"
+            android:id="@+id/search_bar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center_horizontal"
@@ -74,7 +40,7 @@
             android:id="@+id/v_horizontal_line"
             style="@style/style_divider_horizontal"
             android:layout_alignParentBottom="true"
-            android:visibility="gone" />
+            android:visibility="gone"/>
     </RelativeLayout>
 
     <include layout="@layout/fragment_tslist" />
