--- a/app/src/main/res/layout/item_find_some_list.xml
+++ b/app/src/main/res/layout/item_find_some_list.xml
@@ -60,8 +60,7 @@
         android:maxLines="1"
         android:text="点赞 56万"
         android:textColor="@color/normal_for_assist_text"
-        android:textSize="@dimen/size_content_assist"
-        android:visibility="gone"/>
+        android:textSize="@dimen/size_content_assist"/>
 
     <ImageView
         android:id="@+id/iv_user_follow"
