--- a/app/src/main/res/layout/item_notification_review.xml
+++ b/app/src/main/res/layout/item_notification_review.xml
@@ -39,7 +39,7 @@
             android:textSize="@dimen/size_sub_title"/>
 
         <TextView
-            android:id="@+id/tv_user_signature"
+            android:id="@+id/tv_reason"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/tv_name"
@@ -49,7 +49,7 @@
             android:gravity="top"
             android:includeFontPadding="false"
             android:maxLines="1"
-            android:text="走在风中今天阳光突然好温柔，天的温柔地的温柔想你抱着我"
+            android:text="理由：我爱你"
             android:textColor="@color/normal_for_assist_text"
             android:textSize="@dimen/size_content_assist"/>
         <!--点赞数量因为需求，不需要显示，所以暂时隐藏掉，万一以后要显示咧-->
@@ -78,37 +78,26 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/tv_friend"
+            android:id="@+id/tv_agree"
             android:layout_width="@dimen/dp52"
             android:layout_height="@dimen/dp22"
             android:background="@drawable/shape_corner_2dp_bg_theme"
             android:textSize="@dimen/sp14"
             android:textColor="@color/white"
-            android:text="+ 加友"
+            android:text="同意"
             android:gravity="center"/>
 
         <TextView
-            android:id="@+id/tv_follow"
+            android:id="@+id/tv_reject"
             android:layout_marginTop="@dimen/dp10"
             android:layout_width="@dimen/dp52"
             android:layout_height="@dimen/dp22"
             android:background="@drawable/shape_corner_2dp_stroke_1dp_gray"
             android:textSize="@dimen/sp14"
             android:textColor="@color/black_deep"
-            android:text="+ 关注"
+            android:text="拒绝"
             android:gravity="center"/>
 
     </LinearLayout>
-    <!--<ImageView
-        android:id="@+id/iv_user_follow"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:paddingBottom="@dimen/spacing_mid"
-        android:paddingTop="@dimen/spacing_mid"
-        android:paddingLeft="@dimen/spacing_big_large"
-        android:paddingRight="@dimen/spacing_mid"
-        android:src="@mipmap/ico_me_follow"/>-->
 
 </LinearLayout>
