--- a/app/src/main/res/layout/view_mine_integration_header.xml
+++ b/app/src/main/res/layout/view_mine_integration_header.xml
@@ -134,6 +134,16 @@
         app:leftTextLeftPadding="@dimen/spacing_mid"
         app:rightImage="@mipmap/ic_arrow_smallgrey"
         app:showLine="false"/>
+    <!--兑换-->
+    <com.zhiyicx.baseproject.widget.button.CombinationButton
+        android:id="@+id/bt_conversion"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/full_button_height"
+        app:leftImage="@mipmap/ico_integral_extract"
+        app:leftText="@string/conversion_integration"
+        app:leftTextLeftPadding="@dimen/spacing_mid"
+        app:rightImage="@mipmap/ic_arrow_smallgrey"
+        app:showLine="false"/>
     <!--积分商城-->
     <com.zhiyicx.baseproject.widget.button.CombinationButton
         android:id="@+id/bt_integration_shop"
