1.重构聊天界面的一些逻辑（用户主动退出群聊、被管理员移除群聊、群解散时，不再删除会话及聊天记录，并且本地插入一条消息【你已经退出了群聊、你被管理员移出了群聊、该群已解散】,底部则不能输入，显示为【你已经不在群聊当中】）;2.不是好友则不能聊天，底部显示为【对方不是你的好友】3.修复更改群名称时，除了群主更新了群名称，其他群成员在聊天界面未更新的bug

--- a/easeui/src/main/res/layout/ease_widget_chat_primary_menu.xml
+++ b/easeui/src/main/res/layout/ease_widget_chat_primary_menu.xml
@@ -64,9 +64,9 @@
             android:layout_weight="1"
             android:visibility="gone">
             <TextView
+                android:id="@+id/tv_sendmessage_hint"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
-                android:id="@+id/et_sendmessage_hint"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:minHeight="40dp"
