--- a/app/src/main/res/layout/view_chat_input_menu.xml
+++ b/app/src/main/res/layout/view_chat_input_menu.xml
@@ -64,7 +64,7 @@
             <TextView
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
-                android:id="@+id/et_sendmessage_hint"
+                android:id="@+id/tv_sendmessage_hint"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:minHeight="@dimen/chat_info_group_edit_owner_alert_height"
