1.修复链圈小助手聊天呗屏蔽的bug；2.修复有关好友界面显示异常；3.新增群审核页面

--- a/app/src/main/res/layout/item_find_some_list.xml
+++ b/app/src/main/res/layout/item_find_some_list.xml
@@ -60,7 +60,8 @@
         android:maxLines="1"
         android:text="点赞 56万"
         android:textColor="@color/normal_for_assist_text"
-        android:textSize="@dimen/size_content_assist"/>
+        android:textSize="@dimen/size_content_assist"
+        android:visibility="gone"/>
 
     <ImageView
         android:id="@+id/iv_user_follow"
