--- a/app/src/main/res/layout/fragment_chat_info.xml
+++ b/app/src/main/res/layout/fragment_chat_info.xml
@@ -431,6 +431,19 @@
                     android:textColor="@color/important_for_content"
                     android:textSize="@dimen/size_content" />
 
+                <TextView
+                    android:layout_marginTop="@dimen/spacing_normal"
+                    android:visibility="gone"
+                    android:id="@+id/tv_privacy"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/chat_info_header_view_width"
+                    android:background="@color/white"
+                    android:gravity="center_vertical"
+                    android:paddingLeft="@dimen/spacing_mid"
+                    android:text="隐私设置"
+                    android:textColor="@color/important_for_content"
+                    android:textSize="@dimen/size_content" />
+
                 <!--<View-->
                     <!--android:visibility="visible"-->
                     <!--android:id="@+id/vw_upgrade"-->
