新建群绑定组织，群聊更换组织，群聊关联社区

--- a/app/src/main/res/layout/fragment_chat_info.xml
+++ b/app/src/main/res/layout/fragment_chat_info.xml
@@ -430,6 +430,19 @@
                     android:text="@string/chat_info_upgrade"
                     android:textColor="@color/important_for_content"
                     android:textSize="@dimen/size_content" />
+                <!--更换组织-->
+                <LinearLayout
+                    android:layout_marginTop="@dimen/spacing_normal"
+                    android:id="@+id/tv_relevance_community"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/white"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"
+                    android:paddingBottom="@dimen/spacing_mid"
+                    android:paddingLeft="@dimen/spacing_mid"
+                    android:paddingRight="@dimen/spacing_mid"
+                    android:paddingTop="@dimen/spacing_mid">
 
                 <TextView
                     android:layout_marginTop="@dimen/spacing_normal"
@@ -444,6 +457,46 @@
                     android:textColor="@color/important_for_content"
                     android:textSize="@dimen/size_content" />
 
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="@string/chat_relevance_community"
+                        android:textColor="@color/important_for_content"
+                        android:textSize="@dimen/size_content" />
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@mipmap/ic_arrow_smallgrey" />
+                </LinearLayout>
+                <!--更换组织-->
+                <LinearLayout
+                    android:layout_marginTop="@dimen/spacing_normal"
+                    android:id="@+id/tv_change_organization"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/white"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"
+                    android:paddingBottom="@dimen/spacing_mid"
+                    android:paddingLeft="@dimen/spacing_mid"
+                    android:paddingRight="@dimen/spacing_mid"
+                    android:paddingTop="@dimen/spacing_mid">
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="@string/chat_change_organization"
+                        android:textColor="@color/important_for_content"
+                        android:textSize="@dimen/size_content" />
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@mipmap/ic_arrow_smallgrey" />
+                </LinearLayout>
                 <!--<View-->
                     <!--android:visibility="visible"-->
                     <!--android:id="@+id/vw_upgrade"-->
