--- a/easeui/src/main/res/layout/ease_fragment_chat.xml
+++ b/easeui/src/main/res/layout/ease_fragment_chat.xml
@@ -1,36 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:hyphenate="http://schemas.android.com/apk/res-auto"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:animateLayoutChanges="true"
-                android:background="#f2f0eb">
+    xmlns:hyphenate="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:animateLayoutChanges="true"
+    android:background="#f2f0eb">
 
     <com.hyphenate.easeui.widget.EaseTitleBar
         android:id="@+id/title_bar"
-        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         hyphenate:titleBarLeftImage="@drawable/ease_mm_title_back" />
 
-    <RelativeLayout
+    <FrameLayout
+        android:id="@+id/fl_chat_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/input_menu"
-        android:layout_below="@id/title_bar" >
+        android:layout_height="match_parent">
 
-        <com.hyphenate.easeui.widget.EaseChatMessageList
-            android:id="@+id/message_list"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:layout_above="@+id/input_menu"
+            android:layout_below="@id/title_bar">
 
-        <com.hyphenate.easeui.widget.EaseVoiceRecorderView
-            android:id="@+id/voice_recorder"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:visibility="invisible" />
-    </RelativeLayout>
+            <com.hyphenate.easeui.widget.EaseChatMessageList
+                android:id="@+id/message_list"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+            <com.hyphenate.easeui.widget.EaseVoiceRecorderView
+                android:id="@+id/voice_recorder"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:visibility="invisible" />
+        </RelativeLayout>
+
+
+    </FrameLayout>
 
     <com.hyphenate.easeui.widget.EaseChatInputMenu
         android:id="@+id/input_menu"
