1.修改加群和加好友接口判断；2.修复聊天小助手无法和人聊天的bug；3.修复聊天界面无法滑动到底部的bug

--- a/app/src/main/res/layout/item_notification_review.xml
+++ b/app/src/main/res/layout/item_notification_review.xml
@@ -71,7 +71,8 @@
             android:id="@+id/tv_state"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="已同意"/>
+            android:text="已同意"
+            android:gravity="center"/>
 
         <TextView
             android:id="@+id/tv_agree"
