1.首页企业群新增组织分类；2.加群和加好友提交验证信息增加20字长度限制

--- a/app/src/main/res/layout/fragment_verify_friends.xml
+++ b/app/src/main/res/layout/fragment_verify_friends.xml
@@ -28,7 +28,8 @@
             android:gravity="top"
             android:padding="@dimen/dp10"
             android:textColor="@color/video_window_background"
-            android:textSize="@dimen/margin_14" />
+            android:textSize="@dimen/margin_14"
+            android:maxLength="20"/>
 
     </LinearLayout>
 </com.wcy.overscroll.OverScrollLayout>
