--- a/app/src/main/res/layout/zhiyi_layout_standard.xml
+++ b/app/src/main/res/layout/zhiyi_layout_standard.xml
@@ -114,13 +114,13 @@
 
         <ImageView
             android:id="@+id/back"
-            android:layout_width="23dp"
+            android:visibility="gone"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:paddingLeft="12dp"
-            android:paddingStart="12dp"
+            android:padding="12dp"
             android:scaleType="centerInside"
             android:src="@drawable/jz_click_back_selector"/>
 
@@ -151,7 +151,8 @@
             android:layout_marginEnd="14dp"
             android:layout_marginRight="14dp"
             android:gravity="center_vertical"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:visibility="gone">
 
             <ImageView
                 android:id="@+id/battery_level"
@@ -212,6 +213,7 @@
                 android:id="@+id/start"
                 android:layout_width="@dimen/jz_start_button_w_h_normal"
                 android:layout_height="@dimen/jz_start_button_w_h_normal"
+                android:visibility="gone"
                 android:src="@mipmap/ico_video_play_list"/>
 
             <TextView
@@ -232,6 +234,7 @@
                 android:layout_width="@dimen/jz_start_button_w_h_normal"
                 android:layout_height="@dimen/jz_start_button_w_h_normal"
                 android:layout_marginLeft="@dimen/spacing_bigger_large"
+                android:visibility="gone"
                 android:src="@mipmap/ico_video_share"/>
 
             <TextView
