1.修复首页视频列表点赞异常；2.资讯视频详情增加点赞和播放量

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -157,6 +157,7 @@
     <dimen name="dp46">46dp</dimen>
     <dimen name="dp52">52dp</dimen>
     <dimen name="dp64">64dp</dimen>
+    <dimen name="dp70">70dp</dimen>
     <dimen name="dp74">74dp</dimen>
     <dimen name="dp77">77dp</dimen>
     <dimen name="dp90">90dp</dimen>
