1、视频详情页 2、修改创建群聊，不选组织，创建群之后，进群查看组织，默认为九曲互动 3、修改创建群聊，选择组织，点击完成，进入群聊消息界面点击左上角向左箭头，返回页面为创建群聊，添加群成员页面 4、首页推荐咨询视频和普通咨询做判断

--- a/app/src/main/res/layout/fragment_video_info_detail.xml
+++ b/app/src/main/res/layout/fragment_video_info_detail.xml
@@ -74,20 +74,17 @@
     </FrameLayout>
 
     <FrameLayout
+        android:layout_weight="1"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
         <include layout="@layout/fragment_tslist"/>
-
-        <com.zhiyicx.baseproject.widget.InputLimitView
-            android:id="@+id/ilv_comment"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:fitsSystemWindows="true"
-            app:limitSize="@integer/comment_input_max_size"
-            app:showLimitSize="@integer/show_comment_input_size"/>
-
     </FrameLayout>
-
+    <com.zhiyicx.baseproject.widget.InputLimitView
+        android:id="@+id/ilv_comment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:fitsSystemWindows="true"
+        app:limitSize="@integer/comment_input_max_size"
+        app:showLimitSize="@integer/show_comment_input_size"/>
 </LinearLayout>
