--- a/app/src/main/res/layout/item_info.xml
+++ b/app/src/main/res/layout/item_info.xml
@@ -10,20 +10,35 @@
         android:paddingRight="@dimen/spacing_normal"
         android:paddingTop="@dimen/spacing_mid">
 
-    <ImageView
+    <FrameLayout
+        android:id="@+id/item_info_fl"
+        android:layout_width="@dimen/info_channel_list_image_width"
+        android:layout_height="match_parent"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="@dimen/spacing_mid">
+
+        <ImageView
             android:id="@+id/item_info_imag"
             android:layout_width="@dimen/info_channel_list_image_width"
             android:layout_height="match_parent"
-            android:scaleType="centerCrop"
             android:layout_alignParentRight="true"
-            android:layout_marginLeft="@dimen/spacing_mid"
             android:layout_centerVertical="true"
-            android:src="@drawable/shape_default_image"/>
+            android:scaleType="centerCrop"
+            android:src="@mipmap/default_image_for_video" />
 
+        <ImageView
+            android:id="@+id/iv_video_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|right"
+            android:layout_margin="@dimen/dp10"
+            android:src="@mipmap/play_icon" />
+    </FrameLayout>
 
 
     <LinearLayout
-            android:layout_toLeftOf="@+id/item_info_imag"
+            android:layout_toLeftOf="@+id/item_info_fl"
             android:layout_centerVertical="true"
             android:orientation="vertical"
             android:layout_width="match_parent"
@@ -64,17 +79,6 @@
                     android:orientation="horizontal">
 
                 <TextView
-                        android:id="@+id/tv_top_flag"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/shape_info_top_bg"
-                        android:text="@string/info_top"
-                        android:textColor="@color/info_top"
-                        android:layout_marginRight="@dimen/spacing_small_3dp"
-                        android:textSize="@dimen/size_note_assist"
-                        android:padding="@dimen/spacing_tiny"/>
-
-                <TextView
                         android:id="@+id/tv_from_channel"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -100,5 +104,17 @@
 
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/tv_top_flag"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:background="@drawable/shape_info_top_bg"
+        android:padding="@dimen/spacing_tiny"
+        android:text="@string/info_top"
+        android:textColor="@color/info_top"
+        android:textSize="@dimen/size_note_assist" />
 
 </RelativeLayout>
